# Pytest_with_Pylenium_tests

./: README.md  pylenium.json  pyproject.toml
.github/workflows/: run_tests.yml
tests/: test_checkboxes.py  test_example.py  test_todo.py
